# forest_ml

./: README.md  mypy.ini  noxfile.py  pyproject.toml
src/forest_ml/: eda.py  train.py
src/forest_ml/helpers/: data.py  pipeline.py  search_parameters.py
tests/: test_forest_ml.py  test_origin_data.py  test_with_fake_data.py
tests/helpers/: create_fake_dataset.py
