[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "Task for 9-th module"
authors = ["DmitryShuvalov <dmitry_shuvalov@mail.ru>"]

[tool.poetry.scripts]
eda = "forest_ml.eda:create_eda"
train = "forest_ml.train:train"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.3.5"
click = "^8.1.3"
pandas-profiling = "^3.1.0"
sklearn = "^0.0"
scikit-learn = "^1.0.2"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.950"
flake8 = "^4.0.1"
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
